# ChangeLog for x11-libs/libdrm
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/ChangeLog,v 1.107 2010/03/23 19:38:32 chithanh Exp $

*libdrm-2.4.18_pre20100211-r1 (23 Mar 2010)

  23 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +files/2.4.18-0001-datatypes.patch, +libdrm-2.4.18_pre20100211-r1.ebuild:
  Fix int types, bug #298352

*libdrm-2.4.19 (16 Mar 2010)

  16 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libdrm-2.4.19.ebuild:
  Version bump.

*libdrm-2.4.18 (17 Feb 2010)

  17 Feb 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libdrm-2.4.18.ebuild:
  version bump

*libdrm-2.4.18_pre20100211 (15 Feb 2010)

  15 Feb 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libdrm-2.4.18_pre20100211.ebuild:
  add snapshot required by x11-drivers/xf86-video-nouveau

  23 Jan 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/2.4.9-0001-nouveau-store-bo-handle-in-public-struct-in-bo_ref_.patc
  h, -libdrm-2.3.0.ebuild, -libdrm-2.3.1.ebuild, -libdrm-2.4.5.ebuild,
  -libdrm-2.4.9.ebuild,
  -files/2.4.9-0002-nouveau-write-posting-got-lost-somewhere-bring-it.patch,
  -files/2.4.9-0003-libdrm-mode-align-subpixel-results.patch,
  -files/2.4.9-0004-intel-NULL-fake-bo-block-when-freeing-in-evict_all.patch
  :
  rm

  19 Jan 2010; Raúl Porcel <armin76@gentoo.org> libdrm-2.4.15.ebuild:
  s390 stable wrt #294958

  18 Jan 2010; Raúl Porcel <armin76@gentoo.org> libdrm-2.4.15.ebuild:
  alpha/ia64/sh/sparc stable wrt #294958

  14 Jan 2010; Markus Meier <maekke@gentoo.org> libdrm-2.4.15.ebuild:
  arm stable, bug #294958

  12 Jan 2010; Raúl Porcel <armin76@gentoo.org> libdrm-2.4.15.ebuild,
  libdrm-2.4.16.ebuild, libdrm-2.4.17.ebuild:
  Disable intel build on arm as it fails

  27 Dec 2009; Joseph Jezak <josejx@gentoo.org> libdrm-2.4.15.ebuild:
  Marked ppc stable for bug #294958.

*libdrm-2.4.17 (21 Dec 2009)
